# KvantEngine_OLD

./: .clang_complete  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  README.md  compile.sh  main.cpp
engine/: CMakeLists.txt
engine/include/KvantEngine/Core/: Engine.hpp  Game.hpp  GameConfig.hpp  ResourceManager.hpp  StateManager.hpp  Window.hpp
engine/include/KvantEngine/CoreComponents/: CControllable.hpp  CMaterial.hpp  CMeshRenderer.hpp  CNode.hpp
engine/include/KvantEngine/CoreSystems/: InputSystem.hpp  NodeSystem.hpp  RenderSystem.hpp
engine/include/KvantEngine/CoreTypes/: GameState.hpp  Program.hpp  Resource.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
engine/include/KvantEngine/States/: State.hpp
engine/include/KvantEngine/imgui/: imgui_impl_sdl_gl3.h
engine/src/Core/: Engine.cpp  StateManager.cpp  Window.cpp
engine/src/CoreComponents/: CControllable.cpp  CMeshRenderer.cpp  CNode.cpp  Material.hpp  Mesh.hpp
engine/src/CoreSystems/: InputSystem.cpp  NodeSystem.cpp  RenderSystem.cpp
engine/src/CoreTypes/: GameState.cpp
engine/src/States/: State.cpp
engine/src/imgui/: imgui_impl_sdl_gl3.cpp
engine/src/util/: Error.cpp
game/: CMakeLists.txt  IntroState.hpp  main.cpp
game/resources/: config.yaml
game/resources/shaders/: default.vs
include/Core/: .game.hpp.swp  Engine.hpp  Game.hpp  ResourceManager.hpp  StateManager.hpp  Window.hpp  game.hpp  window.hpp
include/CoreComponents/: CCamera.hpp  CControllable.hpp  CMaterial.hpp  CMeshRenderer.hpp  CNode.hpp
include/CoreEvents/: InputEvent.hpp
include/CoreSystems/: InputSystem.hpp  NodeSystem.hpp  RenderSystem.hpp
include/CoreTypes/: GameState.hpp  Program.hpp  Texture.hpp
include/States/: IntroState.hpp  State.hpp
resources/: config.json  config.yaml  file.yaml
resources/shaders/: default.frag  flame.frag
src/: IntroState.hpp  IntroState2.hpp  entitySystem.hpp  game.hpp  game.hpp.bak  glewTst.cpp  main.cpp  window.cpp  window.hpp
src/Core/: Engine.cpp  StateManager.cpp  Window.cpp  window.cpp
src/CoreComponents/: CControllable.cpp  CMeshRenderer.cpp  CNode.cpp  Material.hpp  Mesh.hpp  mesh.hpp
src/CoreShaders/: default.frag
src/CoreSystems/: InputSystem.cpp  NodeSystem.cpp  RenderSystem.cpp
src/CoreTypes/: GameState.cpp
src/States/: IntroState.hpp  State.cpp
src/components/: Material.hpp  mesh.hpp
src/shaders/: default.frag  default.vs
src/types/: Program.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
src/util/: Error.cpp  Error.hpp  error.cpp  error.hpp
